# 21_school_Corewar

./: .gitignore  .gitmodules  .s.s.s.s.s.s.s.s.s  CMakeLists.txt  Makefile  README.md  asm  author  corewar  cycle_penis1.cor  cycle_penis3.cor  cycle_penis4.cor  live_big_penis.cor  live_short_penis.cor  neg_indirect_error.cor  neg_indirect_error.s  penis.s  test.cor  test.s  test1.cor  test1.s
42-Corewar-Checker/: carry_penis.cor  cycle_penis.cor  cycle_penis2.cor  my_champ.cor  my_champ10.cor  my_champ11.cor  my_champ13.cor  my_champ14.cor  my_champ3.cor  my_champ4.cor  my_champ5.cor  my_champ6.cor  my_champ7.cor  my_champ8.cor  my_champ9.cor  new_penis.cor  penis.cor  user.info
42-Corewar-Checker/tests/: carry.sh  live.sh
check/tests/: log.txt  vm_leaks.sh
includes/: asm.h  asm_op.h  corewar.h  errors.h  libft.h  op.h
resources/vm_champs/: .test_1.s.swp  errors.txt  my_mega_super_champ.s  test.cor  test.s  test_1.s
resources/vm_champs/champs/: .42.s.swp  Death.cor  Death.s  test.cor  test.s  test_arms.cor  test_arms.s
scripts/: asm_comparator.sh  corewar_checker.sh  corewar_comparator.sh
scripts/vm_champs/champs/: leeloo.s  slider2.cor  slider2.s
scripts/vm_champs/champs/examples/: bigzork_my.cor
sources/: asm.c  corewar.c  ebalunger.s  ft_assemble.c  ft_check_read_argv_files.c  ft_disassemble.c  ft_init_asm_struct.c
sources/asm/: asm.c  disassemble.c  ft_add_statement.c  ft_arg_types_code_error.c  ft_asm_error.c  ft_assemble.c  ft_check_arg_type.c  ft_check_end_newline.c  ft_check_n_write_op_args.c  ft_check_operation.c  ft_check_quotes.c  ft_check_read_argv_files.c  ft_code_types_warning.c  ft_comment_warning.c  ft_count_exec_code_size.c  ft_count_lines.c  ft_count_num_len.c  ft_create_arg_content.c  ft_dis_add_elem.c  ft_dis_add_s.c  ft_dis_arg_treat.c  ft_dis_arg_types_treat.c  ft_dis_args_treat.c  ft_dis_ask_new_filename.c  ft_dis_bytecode_to_int32.c  ft_dis_check_file_correct.c  ft_dis_check_file_exist.c  ft_dis_choose_new_filename.c  ft_dis_code_types_warning.c  ft_dis_convert_start_filename.c  ft_dis_copy_filename.c  ft_dis_correct_input.c  ft_dis_del_cor.c  ft_dis_elems_treat.c  ft_dis_error.c  ft_dis_error_arg_types_code.c  ft_dis_error_free.c  ft_dis_error_length.c  ft_dis_error_opcode.c  ft_dis_error_register.c  (+99 more)
sources/commands/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  live.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
sources/cw/: corewar.c  cr_set_args.c  ft_visualiser.c  get_data.c  init.c  libft.c  operation.c  parsing_input.c  pl_add_data_champion.c  pl_check_flags.c  pl_check_magic_header.c  pl_init.c  pl_order_of_number.c  pl_order_of_players.c  print.c  terminate.c  vi_operation.c  vm_parce_args.c
sources/cw/commands/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  live.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
sources/lib/: ft_buff_print_free.c  ft_get_next_line.c  ft_printf.c
