cmake_minimum_required(VERSION 3.17.3)
project(corewar C)

set(CMAKE_C_STANDARD 90)

set (SOURCES
		sources/cw/init.c
		sources/cw/pl_init.c
		sources/cw/operation.c
		sources/cw/print.c
		sources/cw/terminate.c
		sources/cw/libft.c
		sources/commands/live.c
		sources/commands/ld.c
		sources/commands/sti.c
		sources/commands/st.c
		sources/commands/ldi.c
		sources/commands/zjmp.c
		sources/commands/add.c
		sources/commands/sub.c
		sources/commands/and.c
		sources/commands/or.c
		sources/commands/xor.c
		sources/commands/fork.c
		sources/commands/aff.c
		sources/cw/pl_order_of_players.c
		sources/cw/pl_check_flags.c
		sources/cw/pl_order_of_number.c
		sources/cw/pl_add_data_champion.c
		sources/cw/pl_check_magic_header.c sources/cw/vm_parce_args.c sources/cw/cr_set_args.c sources/cw/get_data.c
		sources/cw/ft_visualiser.c
		sources/lib/ft_abs.c
		sources/lib/ft_add_dig_to_int.c
		sources/lib/ft_add_float_to_str.c
		sources/lib/ft_add_specials.c
		sources/lib/ft_atoi.c
		sources/lib/ft_b.c
		sources/lib/ft_buff_finded_percent.c
		sources/lib/ft_buff_free.c
		sources/lib/ft_buff_no_percent.c
		sources/lib/ft_buff_print_free.c
		sources/lib/ft_buff_print_n_len.c
		sources/lib/ft_buff_treated_percent.c
		sources/lib/ft_bzero.c
		sources/lib/ft_bzero_buf_n_set_pointers.c
		sources/lib/ft_c.c
		sources/lib/ft_choose_func.c
		sources/lib/ft_count_float.c
		sources/lib/ft_di.c
		sources/lib/ft_dollar_arg.c
		sources/lib/ft_dollar_treat.c
		sources/lib/ft_error_exit.c
		sources/lib/ft_exeption_treat.c
		sources/lib/ft_f.c
		sources/lib/ft_final_print_n_free_rt_len.c
		sources/lib/ft_find_digit.c
		sources/lib/ft_find_in_def.c
		sources/lib/ft_free_tdarr.c
		sources/lib/ft_free_two_dem_str.c
		sources/lib/ft_get_divisional.c
		sources/lib/ft_get_integer.c
		sources/lib/ft_get_next_line.c
		sources/lib/ft_i64toa_base.c
		sources/lib/ft_integer_to_str.c
		sources/lib/ft_isalnum.c
		sources/lib/ft_isalpha.c
		sources/lib/ft_isascii.c
		sources/lib/ft_isbigger.c
		sources/lib/ft_isdigit.c
		sources/lib/ft_isprint.c
		sources/lib/ft_itoa.c
		sources/lib/ft_list_clear.c
		sources/lib/ft_list_size.c
		sources/lib/ft_lstadd.c
		sources/lib/ft_lstaddend.c
		sources/lib/ft_lstdel.c
		sources/lib/ft_lstdelone.c
		sources/lib/ft_lstiter.c
		sources/lib/ft_lstmap.c
		sources/lib/ft_lstnew.c
		sources/lib/ft_memalloc.c
		sources/lib/ft_memccpy.c
		sources/lib/ft_memchr.c
		sources/lib/ft_memcmp.c
		sources/lib/ft_memcpy.c
		sources/lib/ft_memdel.c
		sources/lib/ft_memmove.c
		sources/lib/ft_memset.c
		sources/lib/ft_node_del.c
		sources/lib/ft_num_to_str.c
		sources/lib/ft_o.c
		sources/lib/ft_p.c
		sources/lib/ft_parse_flags.c
		sources/lib/ft_parse_spec.c
		sources/lib/ft_parsing.c
		sources/lib/ft_percent_treat.c
		sources/lib/ft_precision_treat.c
		sources/lib/ft_printf.c
		sources/lib/ft_put_div_by_one.c
		sources/lib/ft_putchar.c
		sources/lib/ft_putchar_fd.c
		sources/lib/ft_putendl.c
		sources/lib/ft_putendl_fd.c
		sources/lib/ft_putnbr.c
		sources/lib/ft_putnbr_fd.c
		sources/lib/ft_putstr.c
		sources/lib/ft_putstr_fd.c
		sources/lib/ft_round_float.c
		sources/lib/ft_s.c
		sources/lib/ft_str_is_int.c
		sources/lib/ft_strcat.c
		sources/lib/ft_strchr.c
		sources/lib/ft_strclr.c
		sources/lib/ft_strcmp.c
		sources/lib/ft_strcpy.c
		sources/lib/ft_strcpy_dptp.c
		sources/lib/ft_strdel.c
		sources/lib/ft_strdup.c
		sources/lib/ft_strequ.c
		sources/lib/ft_striter.c
		sources/lib/ft_striteri.c
		sources/lib/ft_strjoin.c
		sources/lib/ft_strlcat.c
		sources/lib/ft_strlen.c
		sources/lib/ft_strmap.c
		sources/lib/ft_strmapi.c
		sources/lib/ft_strncat.c
		sources/lib/ft_strncmp.c
		sources/lib/ft_strncpy.c
		sources/lib/ft_strnequ.c
		sources/lib/ft_strnew.c
		sources/lib/ft_strnstr.c
		sources/lib/ft_strpcpy.c
		sources/lib/ft_strrchr.c
		sources/lib/ft_strsepcut.c
		sources/lib/ft_strsplit.c
		sources/lib/ft_strstr.c
		sources/lib/ft_strsub.c
		sources/lib/ft_strtrim.c
		sources/lib/ft_to_pow.c
		sources/lib/ft_tolower.c
		sources/lib/ft_toupper.c
		sources/lib/ft_u.c
		sources/lib/ft_u64toa_base.c
		sources/lib/ft_width_n_precision.c
		sources/lib/ft_width_treat.c
		sources/lib/ft_word_count.c
		sources/lib/ft_x.c
		sources/cw/ft_visualiser.c
		sources/cw/vi_operation.c sources/asm/ft_get_one_line.c)

set (SOURCES_CW
		sources/cw/corewar.c)
# ls -l ./sources/asm | awk '{print "sources/asm/"$9}'
set(SOURCES_ASM
		sources/asm/asm.c
		sources/asm/ft_dis_add_elem.c
		sources/asm/ft_dis_error_arg_types_code.c
		sources/asm/ft_asm_error.c
		sources/asm/ft_assemble.c
		sources/asm/ft_check_arg_type.c
		sources/asm/ft_check_end_newline.c
		sources/asm/ft_check_n_write_op_args.c
		sources/asm/ft_check_operation.c
		sources/asm/ft_check_quotes.c
		sources/asm/ft_check_read_argv_files.c
		sources/asm/ft_dis_code_types_warning.c
		sources/asm/ft_dis_warning_comment.c
		sources/asm/ft_count_exec_code_size.c
		sources/asm/ft_count_num_len.c
        sources/asm/ft_dis_add_s.c
		sources/asm/ft_dis_ask_new_filename.c
		sources/asm/ft_dis_check_file_exist.c
		sources/asm/ft_dis_choose_new_filename.c
		sources/asm/ft_dis_convert_start_filename.c
		sources/asm/ft_dis_copy_filename.c
		sources/asm/ft_dis_del_cor.c
		sources/asm/ft_dis_error_free.c
		sources/asm/ft_dis_free_struct.c
		sources/asm/ft_dis_init_struct.c
		sources/asm/ft_dis_read_write.c
		sources/asm/ft_dis_try_create_file.c
		sources/asm/ft_dis_write_file.c
		sources/asm/ft_disassemble.c
		sources/asm/ft_free_asm_struct.c
		sources/asm/ft_dis_get_arg_type.c
		sources/asm/ft_get_label_mention.c
		sources/asm/ft_get_one_arg.c
		sources/asm/ft_dis_get_size.c
		sources/asm/ft_init_asm_struct.c
		sources/asm/ft_init_n_add_label.c
		sources/asm/ft_init_n_add_mention.c
		sources/asm/ft_dis_init_element.c
		sources/asm/ft_int32_to_bytecode.c
		sources/asm/ft_dis_is_arg_types_valide.c
		sources/asm/ft_is_label_char.c
		sources/asm/ft_is_whitespace.c
		sources/asm/ft_label_processing_n_pos_update.c
		sources/asm/ft_label_saving_n_pos_update.c
		sources/asm/ft_dis_error_length.c
		sources/asm/ft_line_data_processing.c
		sources/asm/ft_line_of_whitespaces_or_comment.c
		sources/asm/ft_dis_warning_name.c
		sources/asm/ft_dis_error_opcode.c
		sources/asm/ft_open_quotes_processing.c
		sources/asm/ft_open_solution_file.c
		sources/asm/ft_operation_processing_n_pos_update.c
		sources/asm/ft_dis_parse_bytecode.c
		sources/asm/ft_dis_parse_code.c
		sources/asm/ft_parse_file.c
		sources/asm/ft_dis_parse_int32.c
		sources/asm/ft_parse_line.c
		sources/asm/ft_dis_parse_str.c
		sources/asm/ft_print_error.c
		sources/asm/ft_print_help.c
		sources/asm/ft_dis_treat_arg.c
		sources/asm/ft_dis_treat_arg_types.c
		sources/asm/ft_dis_treat_args.c
		sources/asm/ft_dis_args_treat.c
		sources/asm/ft_dis_error_register.c
		sources/asm/ft_search_label_exist.c
		sources/asm/ft_dis_set_arg_type.c
		sources/asm/ft_start_check_name_or_comment.c
		sources/asm/ft_strjoin_n_free.c
		sources/asm/ft_dis_terminate.c
		sources/asm/ft_transform_mentions.c
		sources/asm/ft_dis_validate_code_types.c
		sources/asm/ft_dis_validate_comment.c
		sources/asm/ft_dis_validate_name.c
		sources/asm/ft_write_arg_type_code.c
		sources/asm/ft_write_bytecode_to_file.c
		sources/asm/ft_write_code_to_exec.c
		sources/asm/ft_write_exec_code_in_line.c
		sources/asm/ft_dis_treat_exec_code.c
		sources/asm/ft_dis_bytecode_to_int32.c
		sources/asm/ft_is_filename.c
        sources/asm/ft_is_op_char.c)

include_directories(includes)

add_executable(corewar ${SOURCES_CW} ${SOURCES})
add_executable(asm ${SOURCES_ASM} ${SOURCES})

target_link_libraries(asm ncurses)
target_link_libraries(corewar ncurses)

